# sonata

./: .gitignore  Cargo.toml  README.md  action.yml  build.rs  highlight.js  index.html  package.json  tailwind.config.js  theme.css  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: action.yml  cydonia.yml  main.yml
blog/: cydonia.toml  sonata.toml  theme.css
blog/posts/: 2023-12-29-hello-world.md  2023-12-30-file-watcher.md  2024-01-01-cydonia.md
blog/templates/: head.hbs  index.hbs  layout.hbs  nav.hbs  post.hbs
posts/: 2023-12-29-hello-world.html  2023-12-30-file-watcher.html  2024-01-01-cydonia.html
src/: app.rs  layout.rs  lib.rs  manifest.rs  post.rs  theme.rs  utils.rs
src/cmd/: build.rs  init.rs  mod.rs  serve.rs  watch.rs
tests/: main.rs
theme/: default.css  package.json  tailwind.config.js  webpack.config.js
theme/src/: highlight.js
