[package]
name = "cydonia"
authors = [ "clearloop" ]
description = "The static site generator."
documentation = "https://docs.rs/cydonia"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.77"
chrono = { version = "0.4.31", features = [ "serde" ] }
colored = "2.1.0"
etc = { version = "0.1.18", features = [ "serde" ] }
handlebars = { version = "5.0.0", features = [ "dir_source" ] }
once_cell = "1.19.0"
pulldown-cmark = { version = "0.9.3", default-features = false }
regex = { version = "1.10.2", default-features = false }
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
toml = "0.8.8"
tracing = "0.1.40"

# Optional features for the cli
ccli = { version = "0.0.1", optional = true }
notify = { version = "6.1.1", optional = true }
tokio = { version = "1.35.1", features = [ "rt-multi-thread" ], optional = true }
warp = { version = "0.3.6", optional = true }
futures = { version = "0.3.30", optional = true }
async-lock = { version = "3.2.0", optional = true }

[features]
default = [ "cli" ]
cli = [ "async-lock", "ccli", "futures", "notify", "tokio", "warp" ]
