[package]
name = "cydonia"
authors = [ "clearloop" ]
description = "The static site generator."
documentation = "https://docs.rs/cydonia"
version = "0.0.5"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.77"
chrono = { version = "0.4.31", features = [ "serde" ] }
colored = "2.1.0"
etc = "0.1.18"
handlebars = { version = "5.0.0", features = [ "dir_source", "rust-embed" ] }
pulldown-cmark = { version = "0.9.3", default-features = false }
rust-embed = "8.2.0"
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
toml = "0.8.8"
tracing = "0.1.40"

# Optional features for the cli
ccli = { version = "0.0.1", optional = true }
notify = { version = "6.1.1", optional = true }
tokio = { version = "1.35.1", features = [ "rt-multi-thread" ], optional = true }
warp = { version = "0.3.6", optional = true }
futures = { version = "0.3.30", optional = true }
async-lock = { version = "3.2.0", optional = true }

[build-dependencies]
anyhow = "1.0.77"
which = "5.0.0"

[features]
default = [ "cli" ]
cli = [ "async-lock", "ccli", "futures", "notify", "tokio", "warp" ]
