[package]
name = "sonata"
version = "0.1.6"
edition = "2021"
authors = ["clearloop"]
description = "The static site generator."
documentation = "https://docs.rs/sonata"
homepage = "https://github.com/clearloop/sonata"
repository = "https://github.com/clearloop/sonata.git"
license = "GPL-3.0-only"
include = [
    "Cargo.toml",
    "blog/theme",
    "blog/templates",
    "src",
    "build.rs",
    "tests",
    "LICENSE",
    "README.md",
]

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
colored = "2.1.0"
etc = "0.1.18"
handlebars = { version = "5.0.0", features = ["dir_source", "rust-embed"] }
pulldown-cmark = { version = "0.9.3", default-features = false }
rust-embed = "8.2.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
serde_yaml = "0.9.30"
toml = "0.8.8"
tracing = "0.1.40"

# Optional features for the cli
ccli = { version = "0.0.1", optional = true }
notify = { version = "6.1.1", optional = true }
tokio = { version = "1.35.1", features = ["rt-multi-thread"], optional = true }
warp = { version = "0.3.6", optional = true }
futures = { version = "0.3.30", optional = true }
async-lock = { version = "3.2.0", optional = true }

[build-dependencies]
anyhow = "1.0.79"
which = "5.0.0"

[features]
default = ["cli"]
cli = ["async-lock", "ccli", "futures", "notify", "tokio", "warp"]
